# freestanding-rt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: allocators.md  customization.md  iterator_interface.md
include/frt/: collections.h  core.h  frt.h  platform.h  runtime.h  sync.h  types.h  utility.h
include/frt/collections/: array.h  static_vec.h  static_vector.h
include/frt/collections/internal/: member_types.h  raw_vec.h
include/frt/core/: algorithms.h  allocator.h  allocators.h  bit.h  bump_alloc.h  iterators.h  limits.h  memory.h  numeric.h  pointers.h
include/frt/core/algorithms/: non_modifying.h  ranges.h
include/frt/core/allocators/: stack_allocator.h
include/frt/core/iterators/: adapters.h  concepts.h  iter_base.h  operations.h  tags.h  traits.h
include/frt/platform/: architecture.h  compare.h  compiler.h  macros.h  new.h
include/frt/runtime/: assert.h  assert_runtime.h  failures.h  ubsan.h
include/frt/sync/: atomic.h  spin_mutex.h  ticket_mutex.h
include/frt/types/: basic.h  concepts.h  exchange.h  forced_constant.h  forward.h  invoke.h  move.h  source_location.h  traits.h
include/frt/utility/: as.h  construct.h  defer.h  functional.h  io_port.h  swap.h  unaligned.h  visit.h  volatile.h
src/: CMakeLists.txt  rt.cc
src/core/: memory.cc
src/platform/: new.cc
src/runtime/: assert.cc  assert_runtime.cc  failures.cc  ubsan.cc
src/sync/: spin_mutex.cc  ticket_mutex.cc
tests/: CMakeLists.txt  playground.cc  test_utilities.h
tests/core/: bit.cc
tests/core/algorithms/: non_modifying.cc  ranges.cc
tests/core/iterators/: iterator_traits.cc
tests/types/: basic.cc  concepts.cc  invoke.cc
tests/types/traits/: array.cc  common_reference.cc  common_type.cc  convertible_to.cc  cv.cc  invoke_result.cc  logical.cc  other.cc
tests/utility/: as.cc  defer.cc  swap.cc
